namespace TDKController.Interface
{
    public interface ICarrierIDReader
    {
        // Define interface members here
    }
}
